# SU-PA2-SEM2

./: CMakeLists.txt  Client.cpp  Client.h  Opsaetning_af_database.sql  Robot.cpp  Robot.h  main.cpp
